# chs-constituents

./: .gitignore  LICENSE  README.md  chs_constituents.py  currents.schema.json  package-lock.json  package.json  pyproject.toml  test_chs_constituents.py  tsconfig.json
.github/workflows/: publish.yml  test.yml
docs/: ts-port.md
docs/superpowers/plans/: 2026-07-21-consume-station-registry.md  2026-07-21-phase1-fetch-stations-live.md  2026-07-22-npm-oidc-publishing.md
docs/superpowers/specs/: 2026-07-22-npm-oidc-publishing-design.md
docs/validation/: ts-port.md
scripts/: gen-derived-fragment.mjs
src/: build.ts  cli.ts  client.ts  derived.ts  events.ts  fit.ts  index.ts  pipeline.ts  registry.ts  validate.ts
stations/: salish-sea.json
test/: build.test.ts  cli.test.ts  client.test.ts  derived.test.ts  events.test.ts  fit-tide.test.ts  fit.test.ts  registry.test.ts  resolve-stations.test.ts  stations.test.ts  validate.test.ts
