[project]
name = "chs-constituents"
version = "0.1.0"
description = "Fit tidal-current harmonic constituents from CHS IWLS predictions, for your own boat."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["utide", "numpy", "scipy"]

[project.scripts]
chs-constituents = "chs_constituents:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["chs_constituents.py", "stations"]
